--- a/static/css/view_svg.css
+++ b/static/css/view_svg.css
@@ -29,6 +29,14 @@
 .vps-info-grid .label {
   font-weight: bold;
 }
+.ip-address {
+  display: inline-block;
+  white-space: nowrap;
+  width: -moz-fit-content;
+  width: -webkit-fit-content;
+  width: fit-content;
+}
+
 
 .vps-card-footer {
   display: flex;
